# MTK-genio-demo

./: .gitignore  INTEGRATED_ARCHITECTURE_SUMMARY.md  README.md  STREAMING_README.md  analyze_worker_allocation.py  armnn_benchmark.py  armnn_delegate.py  basic.py  build.sh  change.md  demo_adaptive_pipeline.py  demo_timeline_debug.py  gstreamer_demo.py  log.txt  logs.txt  main.py  native_stream_demo.py  neuronrt_benchmark.py  neuronrt_delegate.py  nnstream.py  nnstreamer_demo.py  pyproject.toml  requirements.txt  root_cause_analysis.py  run_yolov8n_armnn.py  run_yolov8n_dla.py  run_yolov8n_neuronrt.py  run_yolov8n_tflite.py  test.py  test_armnn.py  test_backpressure.py  test_monitor_cleanup.py  test_pipeline_architecture.py  test_pipeline_logging.py  test_streaming.py  tflite_demo.py  ultralytics_async.py  ultralytics_demo.py  ultralytics_stream.py
docs/: Run_yolov8n_with_ArmNN.md  async_streaming_tutorial.md  backpressure_control.md  benchmarks.md  compile_tflite_to_dla_via_neuronpilot.md  getting_start_with_ubuntu.md  getting_start_with_ubuntu_zh.md  hardware_adaptive_implementation.md  nnstreamer_tutorial.md  ollama_tutorial.md  run_yolov8n_via_armnn.md  run_yolov8n_via_neuronrt.md  run_yolov8n_with_NeuronRT.md  ultralytics_streaming_tutorial.md  ultralytics_tutorial.md  whisper_tutorial.md
docs/demo/: ollama_and_openai_whisper_tutorial.md  ultralytics_async_tflite_case.md
notebook/: armnn_benchmark.ipynb  neuronrt_benchmark.ipynb
requirements/: armnn.txt
ultralytics/nn/: autobackend.py
utils/: __init__.py  nnstreamer.py  tools.py
(+18 files in other folders)
