[project]
name = "mtk-genio-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "tensorflow>=2.19.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
